--- a/.example.env
+++ b/.example.env
@@ -1,5 +1,2 @@
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-PGADMIN_PORT=
-PGADMIN_DEFAULT_EMAIL=
-PGADMIN_DEFAULT_PASSWORD=
+FUSEKI_USER=
+FUSEKI_PASSWORD=
