--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,7 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+.vscode/settings.js
 
 # apache jena fuseki bs
 fuseki-data
