--- a/.example.env
+++ b/.example.env
@@ -1,2 +1,8 @@
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+PGADMIN_PORT=
+PGADMIN_DEFAULT_EMAIL=
+PGADMIN_DEFAULT_PASSWORD=
+EVOKS_MAIL=
 FUSEKI_USER=
 FUSEKI_PASSWORD=
