--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,9 +45,12 @@ services:
       - "8000:8000"
     depends_on:
       - postgres
+      - fuseki-dev
+      - fuseki-live
     networks: 
       - postgres
       - fuseki-dev
+      - fuseki-live
     volumes:
       - .:/code
       - ./skosmos-dev/config.ttl:/code/skosmos-dev/config.ttl
@@ -107,7 +110,7 @@ services:
     networks:
       - fuseki-dev
     volumes:
-      - ./skosmos-live/config.ttl:/var/www/html/config.ttl
+      - ./skosmos-dev/config.ttl:/var/www/html/config.ttl
   skosmos-live:
     build:
       context: github.com/NatLibFi/Skosmos.git
@@ -120,7 +123,7 @@ services:
     networks:
       - fuseki-live
     volumes:
-      - ./skosmos-dev/config.ttl:/var/www/html/config.ttl
+      - ./skosmos-live/config.ttl:/var/www/html/config.ttl
 networks:
   postgres:
     driver: bridge
