cherry pick f9d7b5f1ddb4c90168b068499a30755180afb7e2 into master

--- a/.example.env
+++ b/.example.env
@@ -1,5 +1,11 @@
 POSTGRES_USER=
 POSTGRES_PASSWORD=
+POSTGRES_PORT=
+EVOKS_PORT=
+FUSEKI_DEV_PORT=
+FUSEKI_LIVE_PORT=
+SKOSMOS_DEV_PORT=
+SKOSMOS_LIVE_PORT=
 PGADMIN_PORT=
 PGADMIN_DEFAULT_EMAIL=
 PGADMIN_DEFAULT_PASSWORD=
