--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,8 @@
 version: "3.7"
 
-x-app: &evoks
-  build:
-    context: "."
-  volumes:
-    - .:/code
-  restart: "unless-stopped"
-
 services:
   postgres:
-    container_name: postgres_container
+    container_name: evoks_${INSTANCE_NAME}_postgres
     image: postgres
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
@@ -24,7 +17,9 @@ services:
       - postgres
     restart: unless-stopped
   web:
-    <<: *evoks
+    container_name: evoks_${INSTANCE_NAME:-evoks}_web
+    build:
+      context: "."
     # caution, don't change this port since it is the one used within the container
     # to change port, use the "ports:" section
     command: >
@@ -45,8 +40,9 @@ services:
       - ./skosmos-dev/config.ttl:/code/skosmos-dev/config.ttl
       - ./skosmos-live/config.ttl:/code/skosmos-live/config.ttl
       - ./fuseki-dev/backup:/code/fuseki-dev/backup
+    restart: unless-stopped
   fuseki-dev:
-    container_name: fuseki-dev
+    container_name: evoks_${INSTANCE_NAME}_fuseki-dev
     image: secoresearch/fuseki
     hostname: fuseki-dev
     environment: 
@@ -63,7 +59,7 @@ services:
     networks:
       - fuseki-dev
   fuseki-live:
-    container_name: fuseki-live
+    container_name: evoks_${INSTANCE_NAME}_fuseki-live
     image: secoresearch/fuseki
     hostname: fuseki-live
     environment: 
@@ -80,6 +76,7 @@ services:
     networks:
       - fuseki-live
   skosmos-dev:
+    container_name: evoks_${INSTANCE_NAME}_skosmos-dev
     build:
       context: github.com/NatLibFi/Skosmos.git
       dockerfile: dockerfiles/Dockerfile.ubuntu
@@ -93,6 +90,7 @@ services:
     volumes:
       - ./skosmos-dev/config.ttl:/var/www/html/config.ttl
   skosmos-live:
+    container_name: evoks_${INSTANCE_NAME}_skosmos-live
     build:
       context: github.com/NatLibFi/Skosmos.git
       dockerfile: dockerfiles/Dockerfile.ubuntu
