updated rdflib in requirements. Reason: error because it pointed to direct unsecure link

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ mypy
 django-stubs
 django-environ
 skosify
-rdflib @ git+git://github.com/RDFLib/rdflib.git@26dba21d0562fdc8141cf758c61e14dd9edfa972
+rdflib
 rdflib-jsonld
 language_data
 langcodes
