--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       - ./fuseki-dev/backup:/code/fuseki-dev/backup
     restart: unless-stopped
   fuseki-dev:
-    container_name: evoks_${INSTANCE_NAME}_fuseki-dev
+    container_name: evoks_${INSTANCE_NAME:-evoks}_fuseki-dev
     image: secoresearch/fuseki
     hostname: fuseki-dev
     environment: 
@@ -59,7 +59,7 @@ services:
     networks:
       - fuseki-dev
   fuseki-live:
-    container_name: evoks_${INSTANCE_NAME}_fuseki-live
+    container_name: evoks_${INSTANCE_NAME:-evoks}_fuseki-live
     image: secoresearch/fuseki
     hostname: fuseki-live
     environment: 
@@ -76,7 +76,7 @@ services:
     networks:
       - fuseki-live
   skosmos-dev:
-    container_name: evoks_${INSTANCE_NAME}_skosmos-dev
+    container_name: evoks_${INSTANCE_NAME:-evoks}_skosmos-dev
     build:
       context: github.com/NatLibFi/Skosmos.git
       dockerfile: dockerfiles/Dockerfile.ubuntu
@@ -90,7 +90,7 @@ services:
     volumes:
       - ./skosmos-dev/config.ttl:/var/www/html/config.ttl
   skosmos-live:
-    container_name: evoks_${INSTANCE_NAME}_skosmos-live
+    container_name: evoks_${INSTANCE_NAME:-evoks}_skosmos-live
     build:
       context: github.com/NatLibFi/Skosmos.git
       dockerfile: dockerfiles/Dockerfile.ubuntu
