--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
     image: secoresearch/fuseki
     hostname: fuseki-dev
     environment: 
-      ADMIN_PASSWORD: 'fuseki_password'
+      ADMIN_PASSWORD: ${FUSEKI_PASSWORD:-fuseki_password}
       ENABLE_DATA_WRITE: 'True'
       ENABLE_UPDATE: 'True'
       ENABLE_UPLOAD: 'True'
@@ -63,7 +63,7 @@ services:
     image: secoresearch/fuseki
     hostname: fuseki-live
     environment: 
-      ADMIN_PASSWORD: 'fuseki_password'
+      ADMIN_PASSWORD: ${FUSEKI_PASSWORD:-fuseki_password}
       ENABLE_DATA_WRITE: 'True'
       ENABLE_UPDATE: 'True'
       ENABLE_UPLOAD: 'True'
@@ -78,7 +78,7 @@ services:
   skosmos-dev:
     container_name: evoks_${INSTANCE_NAME:-defaultinstance}_skosmos-dev
     build:
-      context: github.com/NatLibFi/Skosmos.git#v2.17
+      context: https://github.com/NatLibFi/Skosmos.git#v2.17
       dockerfile: dockerfiles/Dockerfile.ubuntu
     ports: 
       - "${SKOSMOS_DEV_PORT:-8001}:80"
@@ -92,7 +92,7 @@ services:
   skosmos-live:
     container_name: evoks_${INSTANCE_NAME:-defaultinstance}_skosmos-live
     build:
-      context: github.com/NatLibFi/Skosmos.git#v2.17
+      context: https://github.com/NatLibFi/Skosmos.git#v2.17
       dockerfile: dockerfiles/Dockerfile.ubuntu
     ports: 
       - "${SKOSMOS_LIVE_PORT:-8002}:80"
