--- a/.example.env
+++ b/.example.env
@@ -1,8 +1,5 @@
 INSTANCE_NAME=
-POSTGRES_PORT=
 EVOKS_PORT=
-FUSEKI_DEV_PORT=
-FUSEKI_LIVE_PORT=
 SKOSMOS_DEV_PORT=
 SKOSMOS_LIVE_PORT=
 EVOKS_MAIL=
@@ -10,3 +7,7 @@ FUSEKI_USER=
 FUSEKI_PASSWORD=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
+# all following only needed for development:
+POSTGRES_PORT=
+FUSEKI_DEV_PORT=
+FUSEKI_LIVE_PORT=
