--- a/.github/workflows/compose-ci.yml
+++ b/.github/workflows/compose-ci.yml
@@ -29,6 +29,14 @@ jobs:
           docker compose -f docker-compose.test.yml build
           docker compose -f docker-compose.test.yml up --abort-on-container-exit
 
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          files: ./coverage.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
+
       - name: Remove Docker containers
         if: always()
         run: docker compose -f docker-compose.test.yml down
+
+
