Add possiblity to run testing pipeline manually

--- a/.github/workflows/compose-ci.yml
+++ b/.github/workflows/compose-ci.yml
@@ -5,6 +5,7 @@ on:
     branches: [ master, main, development ]
   pull_request:
     branches: [ master, main, development ]
+  workflow_dispatch
 
 jobs:
   test-all:
