--- a/.github/workflows/compose-ci.yml
+++ b/.github/workflows/compose-ci.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master, main, development ]
   pull_request:
     branches: [ master, main, development ]
-  workflow_dispatch
+  workflow_dispatch:
 
 jobs:
   test-all:
