--- a/.github/workflows/compose-ci.yml
+++ b/.github/workflows/compose-ci.yml
@@ -2,9 +2,9 @@ name: docker compose tests
 
 on:
   push:
-    branches: [ master, main, development ]
+    branches: [ master, main, development, github-ci ]
   pull_request:
-    branches: [ master, main, development ]
+    branches: [ master, main, development, github-ci ]
   workflow_dispatch:
 
 jobs:
