Remove pull_requests trigger from CI action
- Fixes #113
- jobs were triggered twice when doing a pull request
- Reason: there always follows a merge when doing a successful pull requests
- main and development are merge only, so no need for trigger on pull_request
- for any other branch: no github ci (for now)

--- a/.github/workflows/compose-ci.yml
+++ b/.github/workflows/compose-ci.yml
@@ -2,9 +2,9 @@ name: docker compose tests
 
 on:
   push:
-    branches: [ master, main, development, github-ci ]
-  pull_request:
-    branches: [ master, main, development, github-ci ]
+    branches: [ master, main, development]
+  # pull_request:
+  #   branches: [ master, main, development]
   workflow_dispatch:
 
 jobs:
