--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: EVOKS Docs
+description: Documentation for EVOKS
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://kit-data-manager.github.io/EVOKS
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  Template Repository: https://github.com/kit-data-manager/EVOKS
