Add dependency-updates branch as tests trigger
- push on dependecy-updates branch triggers tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,8 @@
 name: tests
 
 on:
-  # push:
+  push:
+    branches: [ dependency-updates ]
   #   branches: [ master, main, development]
   pull_request:
     branches: [ master, main, development]
