--- a/.github/workflows/custom-tests.yml
+++ b/.github/workflows/custom-tests.yml
@@ -1,10 +1,6 @@
-name: tests
+name: custom-tests
 
 on:
-  # push:
-  #   branches: [ master, main, development]
-  # pull_request:
-  #   branches: [ master, main, development]
   workflow_dispatch:
 
 jobs:
@@ -27,8 +23,8 @@ jobs:
 
       - name: Build and run tests
         run: |
-          docker compose -f docker-compose.test.yml build
-          docker compose -f docker-compose.test.yml up --abort-on-container-exit
+          docker compose -f docker-compose.custom-test.yml build
+          docker compose -f docker-compose.custom-test.yml up --abort-on-container-exit
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
@@ -36,7 +32,8 @@ jobs:
           files: ./coverage.xml
           token: ${{ secrets.CODECOV_TOKEN }}
 
-      - name: Remove Docker containers
-        if: always()
-        run: docker compose -f docker-compose.test.yml down
+      # - name: Remove Docker containers
+      #   if: always()
+      #   run: docker compose -f docker-compose.custom-test.yml down
+
 
