--- a/docker-compose.custom-test.yml
+++ b/docker-compose.custom-test.yml
@@ -29,8 +29,7 @@ services:
              python manage.py migrate &&
              coverage run manage.py test -v 3 tests/model/ tests/migration/ tests/skosmos/ tests/fuseki/ tests/views/ tests/evoks ;
              coverage report ;
-             coverage xml;
-             tail -f /dev/null"
+             coverage xml;"
     ports:
       - "${EVOKS_PORT:-8000}:8000"
     depends_on:
