--- a/docker-compose.custom-test.yml
+++ b/docker-compose.custom-test.yml
@@ -28,7 +28,7 @@ services:
     # We can use any image we want as long as we can chown
     image: ubuntu
     # Need a user priviliged enough to chown
-    user: "root"
+    # user: "root"
     # Specify the group in question
     # group_add:
     #   - '${GROUP_ID}'
@@ -45,10 +45,11 @@ services:
     # caution, don't change this port since it is the one used within the container
     # to change port, use the "ports:" section
     command: >
-      sh -c "cd ./evoks &&
+      sh -c "set -e &&
+             cd ./evoks &&
              python manage.py migrate &&
-             coverage run manage.py test -v 3 tests/model/ tests/migration/ tests/skosmos/ tests/fuseki/ tests/views/ tests/evoks ;
-             coverage report ;
+             coverage run manage.py test -v 3 tests/model/ tests/migration/ tests/skosmos/ tests/fuseki/ tests/views/ tests/evoks &&
+             coverage report &&
              coverage xml"
     ports:
       - "${EVOKS_PORT:-8000}:8000"
@@ -67,7 +68,7 @@ services:
       - ./skosmos-dev/config.ttl:/code/skosmos-dev/config.ttl
       - ./skosmos-live/config.ttl:/code/skosmos-live/config.ttl
       # - ./fuseki-dev/backup:/code/fuseki-dev/backup
-      - fuseki-dev-backup:/code/fuseki-dev/backup:z
+      - fuseki-dev-backup:/code/fuseki-dev/backup
   fuseki-dev:
     container_name: evokstest_fuseki-dev
     image: secoresearch/fuseki
