Fix broken test workflow
- Run fails when exit code of testrunner container is non zero
- Remove service-completed-successfully condition from change-vol-owernship service
- Add healthcheck condition to change-vol-ownership service
- Reason: abort-on-container exit is needed for grabbing exit code with docker compose
- Keep change-vol-ownership service running so abort-on-exit happens when testrunner container exits

--- a/.github/workflows/custom-tests.yml
+++ b/.github/workflows/custom-tests.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build and run tests
         run: |
           docker compose -f docker-compose.custom-test.yml build
-          docker compose -f docker-compose.custom-test.yml up --abort-on-container-exit
+          docker compose -f docker-compose.custom-test.yml up --abort-on-container-exit --exit-code-from web
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
