--- a/docker-compose.custom-test.yml
+++ b/docker-compose.custom-test.yml
@@ -35,8 +35,16 @@ services:
     volumes:
       # The volume to chown
       - fuseki-dev-backup:/tmp/change-ownership
-    # command: chown -R ${USER_ID}:${GROUP_ID} /tmp/change-ownership
-    command: chmod 777 -R  /tmp/change-ownership
+    # execute chmod to enable writing to the volume by other containers
+    # write exit status to file
+    # keep container running to enable abort-on-container-exit for testrunner container
+    # abort-on-container-exit is a prerequisite for using 
+    command: >
+      sh -c "chmod -R 777 /tmp/change-ownership && echo $? > /tmp/chmod_exit_status && tail -f /dev/null"
+    healthcheck:
+      test: ["CMD-SHELL", "cat /tmp/chmod_exit_status | grep -q '^0$'"]
+      interval: 5s
+      retries: 5
 
   web:
     container_name: evokstest_testrunner
@@ -57,8 +65,9 @@ services:
       postgres:
           condition: service_healthy
       change-vol-ownership:
-        # Wait for the ownership to change
-        condition: service_completed_successfully
+        # # Wait for the ownership to change
+        # condition: service_completed_successfully
+          condition: service_healthy
     networks: 
       - postgres
       - fuseki-dev
