Apply fix of test workflow to currently used test workflow
- Test workflow was tested in seperate custom-tests workflow
- now moved to "main" workflow

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -18,6 +18,36 @@ services:
       interval: 10s
       timeout: 3s
       retries: 5
+  change-vol-ownership:
+    # Fix Ownership of Build Directory
+    # Thanks to Bug in Docker itself
+    # We need to use steps like this
+    # Because by default, the volume directory
+    # Is owned by Root
+    # So this helps correct it
+    # We can use any image we want as long as we can chown
+    image: ubuntu
+    # Need a user priviliged enough to chown
+    # user: "root"
+    # Specify the group in question
+    # group_add:
+    #   - '${GROUP_ID}'
+    volumes:
+      # The volume to chown
+      - fuseki-dev-backup:/tmp/change-ownership-fuseki-dev
+      - fuseki-live-backup:/tmp/change-ownership-fuseki-live
+    # execute chmod to enable writing to the volume by other containers
+    # write exit status to file
+    # only exit status of last command is used, but thats ok since either both or none should fail
+    # keep container running to enable abort-on-container-exit for testrunner container
+    # abort-on-container-exit is a prerequisite for using 
+    command: >
+      sh -c "(chmod -R 777 /tmp/change-ownership-fuseki-dev && chmod -R 777 /tmp/change-ownership-fuseki-live ; echo $? > /tmp/chmod_exit_status) ; tail -f /dev/null"
+    healthcheck:
+      test: ["CMD-SHELL", "cat /tmp/chmod_exit_status | grep -q '^0$'"]
+      interval: 5s
+      retries: 5
+
   web:
     container_name: evokstest_testrunner
     build:
@@ -36,6 +66,10 @@ services:
     depends_on:
       postgres:
           condition: service_healthy
+      change-vol-ownership:
+        # # Wait for the ownership to change
+        # condition: service_completed_successfully
+          condition: service_healthy
     networks: 
       - postgres
       - fuseki-dev
@@ -44,6 +78,8 @@ services:
       - .:/code
       - ./skosmos-dev/config.ttl:/code/skosmos-dev/config.ttl
       - ./skosmos-live/config.ttl:/code/skosmos-live/config.ttl
+      - fuseki-dev-backup:/code/fuseki-dev/backup
+      - fuseki-live-backup:/code/fuseki-live/backup
   fuseki-dev:
     container_name: evokstest_fuseki-dev
     image: secoresearch/fuseki
@@ -53,6 +89,10 @@ services:
       ENABLE_DATA_WRITE: 'True'
       ENABLE_UPDATE: 'True'
       ENABLE_UPLOAD: 'True'
+    volumes: 
+      - fuseki-dev-data:/fuseki-base/databases
+      - fuseki-dev-config:/fuseki-base/configuration
+      - fuseki-dev-backup:/fuseki-base/backups
     ports:
       - "${FUSEKI_DEV_PORT:-8003}:3030"
     networks:
@@ -66,6 +106,10 @@ services:
       ENABLE_DATA_WRITE: 'True'
       ENABLE_UPDATE: 'True'
       ENABLE_UPLOAD: 'True'
+    volumes: 
+      - fuseki-live-data:/fuseki-base/databases
+      - fuseki-live-config:/fuseki-base/configuration
+      - fuseki-live-backup:/fuseki-base/backups
     ports:
       - "${FUSEKI_LIVE_PORT:-8004}:3030"
     networks:
@@ -107,5 +151,11 @@ networks:
     driver: bridge
 volumes:
     postgres:
-    pgadmin:
     fuseki:
+    fuseki-dev-data:
+    fuseki-dev-config:
+    fuseki-dev-backup:
+    fuseki-live-data:
+    fuseki-live-config:
+    fuseki-live-backup:
+
