--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build and run tests
         run: |
           docker compose -f docker-compose.test.yml build
-          docker compose -f docker-compose.test.yml up --abort-on-container-exit
+          docker compose -f docker-compose.test.yml up --abort-on-container-exit --exit-code-from web
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
@@ -40,5 +40,4 @@ jobs:
       - name: Remove Docker containers
         if: always()
         run: docker compose -f docker-compose.test.yml down
-
 
