Modify workflow triggers
- Only tests are triggered on push
- custom tests only triggered manually

--- a/.github/workflows/custom-tests.yml
+++ b/.github/workflows/custom-tests.yml
@@ -1,11 +1,11 @@
 name: custom-tests
 
 on:
-  push:
-    branches-ignore:
-      - master
-      - main
-      - development
+  # push:
+  #   branches-ignore:
+  #     - master
+  #     - main
+  #     - development
   workflow_dispatch:
 
 jobs:
