--- a/docker-compose.custom-test.yml
+++ b/docker-compose.custom-test.yml
@@ -4,6 +4,7 @@ services:
     environment:
       POSTGRES_USER: 'postgres'
       POSTGRES_PASSWORD: 'changeme'
+    restart: no
 
   web:
     container_name: evokstest_testrunner
@@ -14,19 +15,24 @@ services:
              coverage run manage.py test -v 3 tests/model/ tests/migration/ tests/skosmos/ tests/fuseki/ tests/views/ tests/evoks &&
              coverage report &&
              coverage xml"
+    restart: no
 
   fuseki-dev:
     container_name: evokstest_fuseki-dev
     environment: 
       ADMIN_PASSWORD: 'fuseki_password'
+    restart: no
       
   fuseki-live:
     container_name: evokstest_fuseki-live
     environment: 
       ADMIN_PASSWORD: 'fuseki_password'
+    restart: no
 
   skosmos-dev:
     container_name: evokstest_skosmos-dev
+    restart: no
 
   skosmos-live:
     container_name: evokstest_skosmos-live
+    restart: no
